--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [main, master]  # 同时监听 main 和 master 分支
+    branches: [master]
 
 permissions:
   contents: read
